update ingress route patching for kustomize example

--- a/12-deploying-to-multiple-environments/kustomize/production/api-golang/kustomization.yaml
+++ b/12-deploying-to-multiple-environments/kustomize/production/api-golang/kustomization.yaml
@@ -5,3 +5,10 @@ resources:
   - ../../base/api-golang/
 patches:
   - path: ./patches/Deployment.yaml
+  - path: ./patches/IngressRoute.replace-host.yaml
+    target:
+      group: traefik.containo.us
+      kind: IngressRoute
+      name: api-golang
+      namespace: demo-app
+      version: v1alpha1
