--- a/12-deploying-to-multiple-environments/kustomize/staging/common/kustomization.yaml
+++ b/12-deploying-to-multiple-environments/kustomize/staging/common/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: demo-app
 resources:
-  - ../../base/infrastructure/
+  - ../../base/common/
