add full kluctl example

--- a/12-deploying-to-multiple-environments/kluctl/Taskfile.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/Taskfile.yaml
@@ -1,6 +1,11 @@
 version: "3"
 
 tasks:
+  helm-pull:
+    cmds:
+      - kluctl helm-pull
+    desc: "Pre-pull helm charts"
+
   render-staging:
     cmds:
       - kluctl render -t staging --print-all
