--- a/12-deploying-to-multiple-environments/kluctl/services/api-node/Deployment.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/services/api-node/Deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: api-node
-          image: sidpalas/devops-directive-docker-course-api-node:{{ args.version }}
+          image: sidpalas/devops-directive-docker-course-api-node:{{ args.apiNode.version }}
           env:
             - name: PORT
               value: "3000"
