add postgres to kluctl config

--- a/14-cicd/kluctl-gitops/clusters/deployment.yaml
+++ b/14-cicd/kluctl-gitops/clusters/deployment.yaml
@@ -7,5 +7,5 @@ deployments:
         tag: v2.24.1
   # # Include things that are required on all clusters (e.g., the KluctlDeployment for the GitOps deployment itself)
   # - path: all
-  # # We use simple templating to change a dedicated deployment item per cluster
-  # - path: {{args.cluster_name}}
+  # We use simple templating to change a dedicated deployment item per cluster
+  - path: {{args.cluster_name}}
