fix kluctl deployment includes

--- a/12-deploying-to-multiple-environments/kluctl/deployment.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/deployment.yaml
@@ -2,11 +2,8 @@ deployments:
   - path: namespaces
   - barrier: true
   - path: common
-  - path: services/api-golang
-  - path: services/api-node
-  - path: services/client-react
-  - path: services/load-generator-python
-  - path: third-party/traefik
+  - include: services
+  - include: third-party
 
 commonLabels:
   devopsdirective.com/course: "kubernetes-course"
