--- a/12-deploying-to-multiple-environments/kluctl/Taskfile.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/Taskfile.yaml
@@ -18,7 +18,7 @@ tasks:
 
   render-production:
     cmds:
-      - kluctl render -t staging --print-all
+      - kluctl render -t production --print-all
     desc: "Render resource yaml with production values"
 
   deploy-production:
