--- a/12-deploying-to-multiple-environments/kluctl/services/api-golang/manifests/IngressRoute.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/services/api-golang/manifests/IngressRoute.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`kubernetes-course{{ args.environmentPostfix }}.devopsdirective.com`) && PathPrefix(`/api/golang`)
+      match: Host(`{{ sharedVars.hostName }}`) && PathPrefix(`/api/golang`)
       middlewares:
         - name: strip-api-prefixes
       services:
