--- a/12-deploying-to-multiple-environments/kluctl/services/client-react/manifests/IngressRoute.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/services/client-react/manifests/IngressRoute.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`kubernetes-course{{ args.environmentPostfix }}.devopsdirective.com`)
+      match: Host(`{{ sharedVars.hostName }}`)
       services:
         - kind: Service
           name: client-react-nginx
