--- a/06-demo-application/postgresql/Taskfile.yaml
+++ b/06-demo-application/postgresql/Taskfile.yaml
@@ -1,5 +1,10 @@
 version: "3"
 
+vars:
+  # IMAGE_REPO: localhost:5000/devops-directive-kubernetes-course-db-migrator
+  IMAGE_REPO: sidpalas/devops-directive-kubernetes-course-db-migrator
+  IMAGE_TAG: foobarbaz
+
 tasks:
   run-postgres:
     desc: Start postgres container
@@ -12,5 +17,20 @@ tasks:
     cmds:
       - |
         CONTAINER_ID=$(docker ps -q --filter "ancestor=postgres:16.3-alpine")
-        docker cp ./init.sql $CONTAINER_ID:/tmp/
+        docker cp ./migrations/init.sql $CONTAINER_ID:/tmp/
         docker exec $CONTAINER_ID psql -U "postgres" -f /tmp/init.sql
+
+  build-container-image:
+    desc: Build container image
+    cmds:
+      - docker build -t {{.IMAGE_REPO}}{{.IMAGE_TAG}} .
+
+  build-container-image-multi-arch:
+    desc: Build multi-arch container image
+    cmds:
+      - |
+        docker buildx build \
+        --platform linux/amd64,linux/arm64 \
+        -t {{.IMAGE_REPO}}:{{.IMAGE_TAG}} \
+        --push \
+        .
