--- a/12-deploying-to-multiple-environments/kluctl/services/api-golang/manifests/Job.db-migrator.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/services/api-golang/manifests/Job.db-migrator.yaml
@@ -3,12 +3,14 @@ kind: Job
 metadata:
   name: db-migrator
   namespace: demo-app
+  annotations:
+    kluctl.io/hook: pre-deploy
 spec:
   template:
     spec:
       containers:
         - name: migrate
-          image: sidpalas/devops-directive-kubernetes-course-db-migrator:foobarbaz
+          image: sidpalas/devops-directive-kubernetes-course-db-migrator:{{ apiGolang.version }}
           args:
             - -path=/app/migrations
             - -database=$(DATABASE_URL)?sslmode=disable
