use actual dockerhub repo in taskfile

--- a/06-demo-application/api-node/Taskfile.yaml
+++ b/06-demo-application/api-node/Taskfile.yaml
@@ -2,8 +2,7 @@ version: "3"
 
 vars:
   DATABASE_URL: "postgres://postgres:foobarbaz@localhost:5432/postgres"
-  IMAGE_REPO: localhost:5000/devops-directive-docker-course-api-node
-  # IMAGE_REPO: sidpalas/devops-directive-docker-course-api-node
+  IMAGE_REPO: sidpalas/devops-directive-docker-course-api-node
   IMAGE_TAG: foobarbaz
 
 tasks:
