--- a/06-demo-application/api-golang/Taskfile.yaml
+++ b/06-demo-application/api-golang/Taskfile.yaml
@@ -2,8 +2,7 @@ version: "3"
 
 vars:
   DATABASE_URL: "postgres://postgres:foobarbaz@localhost:5432/postgres"
-  IMAGE_REPO: localhost:5000/devops-directive-docker-course-api-golang
-  # IMAGE_REPO: sidpalas/devops-directive-docker-course-api-golang
+  IMAGE_REPO: sidpalas/devops-directive-docker-course-api-golang
   IMAGE_TAG: foobarbaz
 
 tasks:
@@ -28,3 +27,7 @@ tasks:
           --bare \
           --tags={{.IMAGE_TAG}} \
           --platform=all
+
+  build-container-image-multi-arch:
+    cmds:
+      - task: build-container-image
