--- a/.github/workflows/image-ci.yml
+++ b/.github/workflows/image-ci.yml
@@ -2,8 +2,8 @@ name: image-ci
 
 on:
   push:
-    branches:
-      - "main"
+    # branches:
+    #   - "main"
     tags:
       - "[0-9]*.[0-9]*.[0-9]*"
 
