--- a/.github/workflows/image-ci.yml
+++ b/.github/workflows/image-ci.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -71,6 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-tag-push
     permissions:
+      contents: write
       pull-requests: write
 
     steps:
