--- a/.github/workflows/image-ci.yml
+++ b/.github/workflows/image-ci.yml
@@ -7,10 +7,6 @@ on:
     tags:
       - "[0-9]*.[0-9]*.[0-9]*"
 
-permissions:
-  pull-requests: write
-  contents: write
-
 jobs:
   build-tag-push:
     runs-on: ubuntu-latest
@@ -74,6 +70,9 @@ jobs:
   update-tags:
     runs-on: ubuntu-latest
     needs: build-tag-push
+    permissions:
+      pull-requests: write
+      contents: write
 
     steps:
       - name: Checkout
@@ -111,3 +110,5 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
