enable cnpg backups on GKE

--- a/09-deploying-auxiliary-tooling/cloudnative-pg/Backup.yaml
+++ b/09-deploying-auxiliary-tooling/cloudnative-pg/Backup.yaml
@@ -2,7 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Backup
 metadata:
   name: now-0
-  namespace: postgres
+  namespace: 09--cnpg
 spec:
   method: barmanObjectStore
   cluster:
