fix: remove extra : from client-react image name

--- a/12-deploying-to-multiple-environments/kluctl/services/client-react/manifests/Deployment.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/services/client-react/manifests/Deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: client-react-nginx
-          image: sidpalas/devops-directive-docker-course-client-react-nginx::{{ clientReact.version }}
+          image: sidpalas/devops-directive-docker-course-client-react-nginx:{{ clientReact.version }}
           ports:
             - containerPort: 8080
               protocol: TCP
