clean up kluctl config to fix resource ordering

--- a/12-deploying-to-multiple-environments/kluctl/.kluctl.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/.kluctl.yaml
@@ -1,5 +1,3 @@
-discriminator: api-node-kluctl-{{ target.name }}
-
 targets:
   - name: production
     args:
@@ -14,3 +12,5 @@ targets:
 args:
   - name: environment
   - name: environmentType
+
+discriminator: kluctl-{{ target.name }}
