--- a/12-deploying-to-multiple-environments/kluctl/services/api-node/manifests/Middleware.yaml
+++ b/12-deploying-to-multiple-environments/kluctl/services/api-node/manifests/Middleware.yaml
@@ -1,11 +1,10 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: strip-api-prefixes
+  name: strip-api-prefixes-node
   namespace: demo-app
 spec:
   stripPrefix:
     forceSlash: false
     prefixes:
       - /api/node
-      - /api/golang
