add grafana cloud and opencost

--- a/09-deploying-auxiliary-tooling/Taskfile.yaml
+++ b/09-deploying-auxiliary-tooling/Taskfile.yaml
@@ -5,6 +5,14 @@ includes:
     taskfile: ./cloudnative-pg/Taskfile.yaml
     dir: ./cloudnative-pg
 
+  grafana-cloud:
+    taskfile: ./grafana-cloud/Taskfile.yaml
+    dir: ./grafana-cloud
+
+  opencost:
+    taskfile: ./opencost/Taskfile.yaml
+    dir: ./opencost
+
   trivy-operator:
     taskfile: ./trivy-operator/Taskfile.yaml
     dir: ./trivy-operator
