add Taskfile.yaml to taskfile spec

--- a/10-developer-experience/Taskfile.yaml
+++ b/10-developer-experience/Taskfile.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 includes:
   external-secrets-operator:
-    taskfile: ./external-secrets-operator
+    taskfile: ./external-secrets-operator/Taskfile.yaml
     dir: ./external-secrets-operator
 
   tilt:
