--- a/14-cicd/kluctl-gitops/clusters/production/KluctlDeployment.devops-directive-kubernetes-course.yaml
+++ b/14-cicd/kluctl-gitops/clusters/production/KluctlDeployment.devops-directive-kubernetes-course.yaml
@@ -1,15 +1,15 @@
 apiVersion: gitops.kluctl.io/v1beta1
 kind: KluctlDeployment
 metadata:
-  name: gitops
+  name: devops-directive-kubernetes-course
   namespace: kluctl-gitops
 spec:
   interval: 5m
   source:
     git:
       url: https://github.com/sidpalas/devops-directive-kubernetes-course.git
-      path: 14-cicd/kluctl-gitops
-  target: {{args.cluster_name}}
+      path: 12-deploying-to-multiple-environments/kluctl
+  target: production
   args:
     # this passes the cluster_name initially passed via `kluctl deploy -a cluster_name=xxx.example.com` into the KluctlDeployment
     cluster_name: {{args.cluster_name}}
