--- a/05-helm/postgresql/Taskfile.yaml
+++ b/05-helm/postgresql/Taskfile.yaml
@@ -30,7 +30,8 @@ tasks:
   ### OCI registry
   04-login-oci-registry:
     cmds:
-      - echo "Use dockerhub username and password"
+      - cmd: gum style "Use your dockerhub username and password!"
+        silent: true
       - helm registry login registry-1.docker.io
     desc: Login to OCI registry
 
